dark mode on the placeholder because why not

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!doctype html>
+
+<style>
+  body {
+    background-color: black;
+    color: white;
+  }
+</style>
+
 <html>
   <head>
     <title>CloudTesting | Home</title>
