removed broken pacman game

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   </head>
   <body>
     <h1>Placeholder Site :)</h1>
+    <p><i>We need some CSS badly.</i></p>
+    <a href="racer/index.html">Racing game</a>
   </body>
 </html>
