--- a/racer/v4.final.html
+++ b/racer/v4.final.html
@@ -67,6 +67,13 @@
     <p>Use the <b>arrow keys</b> to drive the car.</p>
   </div>
 
+  <div class="go-back">
+    <p>
+      <a href="../index.html">Go back?</a>
+    </p>
+
+  </div>
+
   <div id="racer">
     <div id="hud">
       <span id="speed"            class="hud"><span id="speed_value" class="value">0</span> mph</span>
