Redone CSS & Code readability

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Random Stuffs :></title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body class="dark">
 
-<style>
-  body {
-    background-color: black;
-    color: white;
-  }
-</style>
+  <div class="main-heading">
+    <h1 class="header">Welcome :></h1>
+  </div>
 
-<html>
-  <head>
-    <title>CloudTesting | Home</title>
-  </head>
-  <body>
-    <h1>Placeholder Site :)</h1>
-    <p><i>We need some CSS badly.</i></p>
-    <a href="racer/index.html">Racing game</a>
-  </body>
+  <div class="link-list">
+    <a class="link-button" href="racer/index.html">Racing Game</a>
+  </div>
+  
+</body>
 </html>
