--- a/racer/index.html
+++ b/racer/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html> 
 <html>
 <head>
-  <title>Javascript Racer</title>
+  <title>Javascript Racer Game</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <link rel="stylesheet" href="../style.css">
 </head> 
 
-<body> 
+<body class="dark"> 
 
-  <ul>
-    <li><a href='v1.straight.html'>Version 1 - Straight</a></li>
-    <li><a href='v2.curves.html'>Version 2 - Curves</a></li>
-    <li><a href='v3.hills.html'>Version 3 - Hills</a></li>
-    <li><a href='v4.final.html'>Version 4 - Final</a></li>
+  <div class="main-heading">
+    <h1 class="header">Please select a version.</h1>
+  </div>
+
+  <ul class="generic-list">
+    <li class="generic-list-item"><a class="link-button" href='v1.straight.html'>Version 1 - Straight</a></li>
+    <li class="generic-list-item"><a class="link-button" href='v2.curves.html'>Version 2 - Curves</a></li>
+    <li class="generic-list-item"><a class="link-button" href='v3.hills.html'>Version 3 - Hills</a></li>
+    <li class="generic-list-item"><a class="link-button" href='v4.final.html'>Version 4 - Final</a></li>
+    <li class="generic-list-item"><a class="link-button" href='../index.html'>Go Back</a></li>
   </ul>
 
 </body> 
