--- a/racer/v4.final.html
+++ b/racer/v4.final.html
@@ -5,6 +5,7 @@
   <title>Javascript Racer - v4 (final)</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <link href="common.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="../style.css">
 </head> 
 
 <body> 
@@ -69,7 +70,7 @@
 
   <div class="go-back">
     <p>
-      <a href="../index.html">Go back?</a>
+      <a class="link-button" href="index.html">Go back?</a>
     </p>
 
   </div>
