--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Random Stuffs :></title>
   <link rel="stylesheet" href="style.css">
+  <!--Embed Section-->
+  <meta content="CloudTesting.ml" property="og:title" />
+  <meta content="Home for random projects and code snipets. Go make a PR on github to deploy your own code!" property="og:description" />
+  <meta content="https://github.com/rinzler100/public-cloudtesting/" property="og:url" />
+  <!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
+  <meta content="#f89dfc" data-react-helmet="true" name="theme-color" />
+  <!--End of Embed Section-->
+
+
+
 </head>
 <body class="dark">
 
