Made link pages mobile friendly

--- a/racer/index.html
+++ b/racer/index.html
@@ -12,13 +12,13 @@
     <h1 class="header">Please select a version.</h1>
   </div>
 
-  <ul class="generic-list">
-    <li class="generic-list-item"><a class="link-button" href='v1.straight.html'>Version 1 - Straight</a></li>
-    <li class="generic-list-item"><a class="link-button" href='v2.curves.html'>Version 2 - Curves</a></li>
-    <li class="generic-list-item"><a class="link-button" href='v3.hills.html'>Version 3 - Hills</a></li>
-    <li class="generic-list-item"><a class="link-button" href='v4.final.html'>Version 4 - Final</a></li>
-    <li class="generic-list-item"><a class="link-button" href='../index.html'>Go Back</a></li>
-  </ul>
+  <div class="link-list">
+    <a class="link-button" href='v1.straight.html'>Version 1 - Straight</a>
+    <a class="link-button" href='v3.hills.html'>Version 3 - Hills</a>
+    <a class="link-button" href='v2.curves.html'>Version 2 - Curves</a>
+    <a class="link-button" href='v4.final.html'>Version 4 - Final</a>
+    <a class="link-button" href='../index.html'>Go Back</a>
+  </div>
 
 </body> 
 </html>
